<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">4点</string>
    <string name="ActivityMainTitle">4dian-晨型人</string>
    <string name="welcome_des">版权所有@4dian.me</string>
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_timeManagement">分配</string>
    <string name="main_navigation_habit">习惯</string>
    <string name="main_navigation_voice">晨音</string>
    <string name="main_navigation_more">更多</string>
    <string name="title_home">我的4点</string>
    <string name="title_timeManagement">如何分配你的时间</string>
    <string name="title_habit">习惯在这里养成</string>
    <string name="title_voice">来自他们的声音</string>
    <string name="title_more">更多设置</string>
    <string name="app_alert">温馨提示</string>
    <string name="app_close">确定退出4点吗？</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_ok">确 定</string>
    <string name="title_back">返回</string>
    <string name="title_save">保存</string>
    <string name="title_send">发送</string>
    <string name="btn_signup">注册</string>
    <string name="label_email">邮箱：</string>
    <string name="label_password">密码：</string>
    <string name="label_password_repeat">确认密码：</string>
    <string name="btn_login">登录</string>
    <string name="label_ok">确定</string>
    <string name="label_forget">忘记密码？</string>

    <!-- more -->
    <string name="goal_setting">目标设定</string>
    <string name="hot_rank">热榜(待定)</string>
    <string name="base_info">用户设置</string>
    <string name="personal_info">基本信息</string>
    <string name="avatar_setting">头像设置</string>
    <string name="change_password">修改密码</string>
    <string name="other">其他</string>
    <string name="feedback">意见反馈</string>
    <string name="check_update">检测更新</string>
    <string name="about">关于</string>
    <string name="login">登陆</string>
    <string name="sign_up">注册</string>
    <string name="btn_logout">注销登录</string>

    <!-- home -->
    <string name="home_info">个人信息</string>
    <string name="home_getup">起床记录</string>
    <string name="home_time">分配比例</string>
    
     <!-- timemanagemnt -->
    <string name="timemanagement_set_time">分配时间</string>
    <string name="timemanagement_show_rate">今日评级</string>


    <!--   set time -->
    <string name="gain">收获:</string>
    <string name="write_your_gain">写下你今天的收货感谢或者是心情。</string>
    
    
    <!-- goal_setting -->
    <string name="goal_setting_dream">目标·梦想:</string>
    <string name="goal_setting_level">级别:</string>
    <string name="goal_setting_time">需要时间:</string>
    <string name="goal_setting_deadline">期限日期:</string>
    <string name="goal_setting_everyday">每天学习:</string>
    <string name="goal_setting_confirm">目标确定</string>

    <!-- personal_setting -->
    <string name="personal_setting_user">用户名:</string>
    <string name="personal_setting_sex">性别:</string>
    <string name="personal_setting_agelevel">年龄层:</string>
    <string name="personal_setting_identity">身份所属:</string>
    <string name="personal_setting_city">现居城市:</string>
    <string name="personal_setting_homeurl">个人主页:</string>
    <string name="personal_setting_selfintroduction">自我介绍:</string>
    <string name="personal_setting_save">保存修改</string>

    <!-- change_password -->
    <string name="change_password_cpwd">当前密码:</string>
    <string name="change_password_npwd">新的密码:</string>
    <string name="change_password_cnpwd">再次输入:</string>
    <string name="change_password_savepwd">密码重置</string>

    <!-- feedback -->
    <string name="feedback_text">欢迎您给我们提建议和意见!</string>

    <!-- menu -->
    <string name="menu_exit">退出</string>
    <string name="exitToast">再按一次,我就真的退出哦！</string>

    <!-- achart -->
    <string name="add_values">输入值生成走势图</string>

    <!-- main5things -->
    <string name="sleep">睡眠</string>
    <string name="regular">固定</string>
    <string name="invest">投资</string>
    <string name="waste">浪费</string>
    <string name="unknown">未知</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="action_settings">action_settings</string>

</resources>