<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/vpi__background_holo_light" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" >
        </FrameLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/console_line_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/main_navigation_background"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/main_tab_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/main_navigation_background"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/main_tab_home"
                    style="@style/main_tab_bottom"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:drawableTop="@drawable/main_nav_home"
                    android:text="@string/main_navigation_home" />

                <RadioButton
                    android:id="@+id/main_tab_timeManagement"
                    style="@style/main_tab_bottom"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/main_nav_timemanagement"
                    android:text="@string/main_navigation_timeManagement" />

                <RadioButton
                    android:id="@+id/main_tab_habit"
                    style="@style/main_tab_bottom"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/main_nav_habit"
                    android:text="@string/main_navigation_habit" />

                <RadioButton
                    android:id="@+id/main_tab_voice"
                    style="@style/main_tab_bottom"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/main_nav_voice"
                    android:text="@string/main_navigation_voice" />

                <RadioButton
                    android:id="@+id/main_tab_more"
                    style="@style/main_tab_bottom"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/main_nav_more"
                    android:text="@string/main_navigation_more" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</TabHost>