<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:umadsdk="http://schemas.android.com/apk/res/com.LoveBus"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/vpi__background_holo_light" >

  <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@drawable/title_bg_bar" >

        <TextView
            android:id="@+id/home_tab_personl_info"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/home_info"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/home_tab_getup"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/home_getup"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/home_tab_time_rate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/home_time"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

   <ImageView
        android:id="@+id/home_cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/tab_selected" />

    <android.support.v4.view.ViewPager
        android:id="@+id/home_vPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />
   

</LinearLayout>