<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/vpi__background_holo_light" >

    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/titleBg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/title_bg_bar" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:padding="10.0dip"
            android:singleLine="true"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>
    
   <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top_relative"
        android:scrollbarThumbVertical="@drawable/scrollview_bg"
        android:fadingEdgeLength="0.0dip"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12.0dip"
            android:paddingRight="12.0dip"
            android:paddingTop="10.0dip" >

            <LinearLayout
                style="@style/SWInputContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/SWInputLabel"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/label_email" />

                <EditText
                    android:id="@+id/tv_email"
                    style="@style/SWInput"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.65"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                style="@style/SWInputContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/SWInputLabel"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/label_password" />

                <EditText
                    android:id="@+id/tv_password"
                    style="@style/SWInput"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.65"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                style="@style/SWInputContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/SWInputLabel"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/label_password_repeat" />

                <EditText
                    android:id="@+id/tv_password_repeat"
                    style="@style/SWInput"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.65"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_singup_page"
                style="@style/SWBaseButton.Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12.0dip"
                android:onClick="signup"
                android:text="@string/btn_signup" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>