<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/vpi__background_holo_light" >

    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/titleBg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/title_bg_bar" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:padding="10.0dip"
            android:singleLine="true"
            android:text="@string/avatar_setting"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/avatar_setting_save"
            style="@style/SWBaseButton.Normal"
            android:layout_width="60.0dip"
            android:layout_height="35.0dip"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5.0dip"
            android:layout_marginBottom="5.0dip"
            android:text="@string/title_save" />
        
         <Button
            android:id="@+id/avatar_setting_back"
            style="@style/SWBaseButton.Normal"
            android:layout_width="60.0dip"
            android:layout_height="35.0dip"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5.0dip"
            android:layout_marginBottom="5.0dip"
            android:text="@string/title_back" />
    </RelativeLayout>

   <QuickContactBadge
       android:id="@+id/quickContactBadge1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/top_relative"
       android:layout_marginLeft="30dp"
       android:layout_marginTop="50dp" />

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/quickContactBadge1"
       android:layout_below="@+id/top_relative"
       android:layout_marginTop="21dp"
       android:text="您的头像"
       android:textColor="@color/black"
       android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>